Retrain model and segment images

--- a/traditional-segmentation/rand-forest.ipynb
+++ b/traditional-segmentation/rand-forest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 22,
    "id": "21550604",
    "metadata": {},
    "outputs": [],
@@ -22,18 +22,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 23,
    "id": "50e38f2c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "img = cv2.imread(\"partial_labels/sandstone_train_images.tif\")\n",
+    "img = cv2.imread(\"Train_images/Sandstone_Versa0000.tif\")\n",
     "img = cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 24,
    "id": "ae938121",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 25,
    "id": "66715a45",
    "metadata": {},
    "outputs": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 26,
    "id": "23ab4a86",
    "metadata": {},
    "outputs": [],
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 27,
    "id": "d2f6492b",
    "metadata": {},
    "outputs": [],
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 28,
    "id": "6cd80977",
    "metadata": {},
    "outputs": [],
@@ -182,13 +182,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 29,
    "id": "85603158",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Add a column for mask (ground truth)\n",
-    "labeled_img = cv2.imread(\"partial_labels/sandstone_partial_labels_from_APEER_ML.tif\")\n",
+    "labeled_img = cv2.imread(\"Train_masks/Sandstone_Versa0000.tif\")\n",
     "labeled_img = cv2.cvtColor(labeled_img, cv2.COLOR_BGR2GRAY)\n",
     "labeled_img1 = labeled_img.reshape(-1)\n",
     "df[\"Label\"] = labeled_img1"
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 30,
    "id": "efddb1dc",
    "metadata": {},
    "outputs": [
@@ -267,7 +267,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>29</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -291,7 +291,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>29</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -315,7 +315,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>29</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -339,7 +339,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>29</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -363,7 +363,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>29</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -386,16 +386,16 @@
        "4       0       0  ...        0           0      0.0    0.0     0.0      0.0   \n",
        "\n",
        "   Gaussian s3  Gaussian s7  Median s3  Label  \n",
-       "0            0            0          0      0  \n",
-       "1            0            0          0      0  \n",
-       "2            0            0          0      0  \n",
-       "3            0            0          0      0  \n",
-       "4            0            0          0      0  \n",
+       "0            0            0          0     29  \n",
+       "1            0            0          0     29  \n",
+       "2            0            0          0     29  \n",
+       "3            0            0          0     29  \n",
+       "4            0            0          0     29  \n",
        "\n",
        "[5 rows x 42 columns]"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 31,
    "id": "0c15993f",
    "metadata": {},
    "outputs": [],
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 32,
    "id": "f094d3c3",
    "metadata": {},
    "outputs": [],
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 33,
    "id": "411ad5c1",
    "metadata": {},
    "outputs": [],
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 34,
    "id": "b9cc7020",
    "metadata": {},
    "outputs": [
@@ -457,7 +457,7 @@
        "RandomForestClassifier(n_estimators=10, random_state=42)"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 35,
    "id": "38c032bf",
    "metadata": {},
    "outputs": [],
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 36,
    "id": "73c07ca0",
    "metadata": {},
    "outputs": [
@@ -486,7 +486,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy =  0.9285497178658797\n"
+      "Accuracy =  0.9811624612096225\n"
      ]
     }
    ],
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 37,
    "id": "7a30694a",
    "metadata": {},
    "outputs": [
@@ -513,46 +513,46 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Gaussian s7       0.093615\n",
-      "Scharr            0.071959\n",
-      "Prewitt           0.070230\n",
-      "Sobel             0.067229\n",
-      "Roberts           0.066827\n",
-      "Gaussian s3       0.064670\n",
-      "Median s3         0.054432\n",
-      "Original Image    0.046912\n",
-      "Gabor31           0.040916\n",
-      "Gabor32           0.039195\n",
-      "Gabor23           0.035149\n",
-      "Gabor29           0.034994\n",
-      "Gabor30           0.032699\n",
-      "Gabor21           0.031745\n",
-      "Gabor15           0.031224\n",
-      "Gabor6            0.028231\n",
-      "Gabor16           0.024625\n",
-      "Gabor4            0.023481\n",
-      "Gabor3            0.021061\n",
-      "Gabor5            0.018377\n",
-      "Gabor24           0.016198\n",
-      "Gabor20           0.015342\n",
-      "Gabor8            0.014910\n",
-      "Gabor22           0.012561\n",
-      "Gabor7            0.011696\n",
-      "Gabor19           0.010758\n",
-      "Gabor27           0.010193\n",
-      "Gabor28           0.008138\n",
-      "Canny Edge        0.002633\n",
-      "Gabor9            0.000000\n",
-      "Gabor13           0.000000\n",
-      "Gabor2            0.000000\n",
-      "Gabor10           0.000000\n",
-      "Gabor11           0.000000\n",
-      "Gabor12           0.000000\n",
-      "Gabor14           0.000000\n",
-      "Gabor25           0.000000\n",
+      "Gaussian s3       0.178947\n",
+      "Gabor4            0.163302\n",
+      "Gabor3            0.158504\n",
+      "Original Image    0.088711\n",
+      "Gabor24           0.088503\n",
+      "Gabor16           0.087554\n",
+      "Gabor15           0.079062\n",
+      "Median s3         0.027020\n",
+      "Gabor8            0.024883\n",
+      "Gaussian s7       0.019317\n",
+      "Gabor7            0.012462\n",
+      "Gabor6            0.011092\n",
+      "Sobel             0.010510\n",
+      "Prewitt           0.010001\n",
+      "Gabor21           0.008490\n",
+      "Scharr            0.006318\n",
+      "Roberts           0.005614\n",
+      "Gabor31           0.005494\n",
+      "Gabor32           0.003035\n",
+      "Gabor29           0.002628\n",
+      "Gabor30           0.002556\n",
+      "Gabor23           0.002443\n",
+      "Gabor5            0.001417\n",
+      "Gabor22           0.001290\n",
+      "Canny Edge        0.000802\n",
+      "Gabor20           0.000029\n",
+      "Gabor19           0.000007\n",
+      "Gabor27           0.000005\n",
+      "Gabor28           0.000004\n",
+      "Gabor26           0.000000\n",
       "Gabor1            0.000000\n",
       "Gabor18           0.000000\n",
-      "Gabor26           0.000000\n",
+      "Gabor9            0.000000\n",
+      "Gabor25           0.000000\n",
+      "Gabor14           0.000000\n",
+      "Gabor13           0.000000\n",
+      "Gabor12           0.000000\n",
+      "Gabor11           0.000000\n",
+      "Gabor2            0.000000\n",
+      "Gabor10           0.000000\n",
       "Gabor17           0.000000\n",
       "dtype: float64\n"
      ]
@@ -574,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 38,
    "id": "fc0a114f",
    "metadata": {},
    "outputs": [],
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 39,
    "id": "1f4cf3a0",
    "metadata": {},
    "outputs": [],
@@ -597,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 40,
    "id": "3a8dd914",
    "metadata": {},
    "outputs": [],
@@ -607,14 +607,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 42,
    "id": "3aa5d29d",
    "metadata": {},
    "outputs": [],
    "source": [
     "from matplotlib import pyplot as plt\n",
     "plt.imshow(segmented, cmap=\"turbo\")\n",
-    "plt.imsave(\"segmented_rock_turbo.jpg\", segmented, cmap=\"turbo\")"
+    "plt.imsave(\"rf_segmented/versa_0000_turbo.jpg\", segmented, cmap=\"turbo\")"
    ]
   }
  ],
