Training and Evaluation

--- a/traditional-segmentation/rand_forest_multi.ipynb
+++ b/traditional-segmentation/rand_forest_multi.ipynb
@@ -294,10 +294,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "c167ba23",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RandomForestClassifier(max_depth=6, n_estimators=10, random_state=42)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "b289a4e8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy =  0.10206684256816183\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn import metrics\n",
+    "prediction_test = model.predict(X_test)\n",
+    "print(\"Accuracy = \", metrics.accuracy_score(y_test, prediction_test))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "44116074",
+   "metadata": {},
+   "source": [
+    "### Train #2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "b898353a",
+   "metadata": {},
    "outputs": [],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "model = RandomForestClassifier(n_estimators=25, max_depth=10, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "62b9069d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RandomForestClassifier(max_depth=10, n_estimators=25, random_state=42)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model.fit(X_train, y_train)"
    ]
@@ -305,7 +376,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b289a4e8",
+   "id": "522ce06c",
    "metadata": {},
    "outputs": [],
    "source": []
