--- a/traditional-segmentation/rand_forest_multi.ipynb
+++ b/traditional-segmentation/rand_forest_multi.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 28,
    "id": "a09c0f48",
    "metadata": {},
    "outputs": [
@@ -139,12 +139,13 @@
     "    median_img1 = median_img.reshape(-1)\n",
     "    df[\"Median s3\"] = median_img1\n",
     "    \n",
-    "    image_dataset = image_dataset.append(df)"
+    "    image_dataset = image_dataset.append(df)\n",
+    "    del(df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
    "id": "69ee42b6",
    "metadata": {},
    "outputs": [
@@ -245,12 +246,13 @@
     "    median_img1 = median_img.reshape(-1)\n",
     "    df[\"Median s3\"] = median_img1\n",
     "    \n",
-    "    mask_dataset = mask_dataset.append(df)"
+    "    mask_dataset = mask_dataset.append(df)\n",
+    "    del(df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 30,
    "id": "3356756a",
    "metadata": {},
    "outputs": [],
@@ -261,7 +263,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 31,
+   "id": "45b9b47c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "del(image_dataset)\n",
+    "del(mask_dataset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "id": "9860581a",
    "metadata": {},
    "outputs": [],
@@ -272,13 +285,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 33,
    "id": "3857e611",
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, Y, test_size=0.2, random_state=20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "485561d6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "del(X)\n",
+    "del(Y)"
    ]
   },
   {
@@ -335,7 +359,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44116074",
+   "id": "0393f1a3",
    "metadata": {},
    "source": [
     "### Train #2"
@@ -344,18 +368,17 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "b898353a",
+   "id": "58e232ce",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.ensemble import RandomForestClassifier\n",
     "model = RandomForestClassifier(n_estimators=25, max_depth=10, random_state=42)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "62b9069d",
+   "id": "83bc2345",
    "metadata": {},
    "outputs": [
     {
@@ -375,11 +398,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "522ce06c",
+   "execution_count": 16,
+   "id": "e1ac18ce",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy =  0.19047566695983584\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn import metrics\n",
+    "prediction_test = model.predict(X_test)\n",
+    "print(\"Accuracy = \", metrics.accuracy_score(y_test, prediction_test))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "34784e67",
+   "metadata": {},
+   "source": [
+    "### Train #3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "9a3fb9a4",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "model = RandomForestClassifier(n_estimators=50, max_depth=15, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "3f0da08d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RandomForestClassifier(max_depth=15, n_estimators=50, random_state=42)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "6168e710",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "filename = \"sandstone_model_ne50_md15\"\n",
+    "pickle.dump(model, open(filename, \"wb\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f08bfe71",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prediction_test = model.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "22922b6f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Accuracy = \", metrics.accuracy_score(y_test, prediction_test))"
+   ]
   }
  ],
  "metadata": {
