Train RF with 75 estimators, 20 max depth

--- a/traditional-segmentation/rand_forest_multi.ipynb
+++ b/traditional-segmentation/rand_forest_multi.ipynb
@@ -264,7 +264,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "45b9b47c",
+   "id": "f6bb4cfe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +297,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "485561d6",
+   "id": "cc8124d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0393f1a3",
+   "id": "ffab46f5",
    "metadata": {},
    "source": [
     "### Train #2"
@@ -368,7 +368,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "58e232ce",
+   "id": "1551a9df",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,7 +378,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "83bc2345",
+   "id": "91b02333",
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +399,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "e1ac18ce",
+   "id": "d43df81e",
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34784e67",
+   "id": "dacf5f7b",
    "metadata": {},
    "source": [
     "### Train #3"
@@ -427,7 +427,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "9a3fb9a4",
+   "id": "4df62870",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -437,7 +437,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "3f0da08d",
+   "id": "2b33f7f9",
    "metadata": {},
    "outputs": [
     {
@@ -458,7 +458,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "6168e710",
+   "id": "a69596d5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -469,8 +469,131 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 35,
+   "id": "326deba1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prediction_test = model.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "99d041f9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy =  0.4427213427147464\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Accuracy = \", metrics.accuracy_score(y_test, prediction_test))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4a1dbbdb",
+   "metadata": {},
+   "source": [
+    "### Train #4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "c8671d52",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = RandomForestClassifier(n_estimators=75, max_depth=20, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "30c7506e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RandomForestClassifier(max_depth=20, n_estimators=75, random_state=42)"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "f08bfe71",
+   "id": "15acd8a2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# filename = \"sandstone_model_ne75_md20\"\n",
+    "# pickle.dump(model, open(filename, \"wb\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "d50c4711",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['sandstone_model_ne75_md20.sav']"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import joblib\n",
+    "filename = 'sandstone_model_ne75_md20.sav'\n",
+    "joblib.dump(model, filename)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c3008d9d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filename_joblib = 'sandstone_model_ne75_md20.joblib'\n",
+    "joblib.dump(model, filename)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "4aa1d377",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# loaded_model = joblib.load(filename)\n",
+    "# result = loaded_model.score(X_test, Y_test) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "573a3f5a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -480,7 +603,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22922b6f",
+   "id": "0e08e720",
    "metadata": {},
    "outputs": [],
    "source": [
