--- a/traditional-segmentation/rand_forest_multi.ipynb
+++ b/traditional-segmentation/rand_forest_multi.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "id": "a09c0f48",
    "metadata": {},
    "outputs": [
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "id": "69ee42b6",
    "metadata": {},
    "outputs": [
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "id": "3356756a",
    "metadata": {},
    "outputs": [],
@@ -263,8 +263,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "f6bb4cfe",
+   "execution_count": 7,
+   "id": "daeda7b7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 8,
    "id": "9860581a",
    "metadata": {},
    "outputs": [],
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 9,
    "id": "3857e611",
    "metadata": {},
    "outputs": [],
@@ -296,8 +296,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "cc8124d8",
+   "execution_count": 10,
+   "id": "2ce6c9af",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ffab46f5",
+   "id": "12431a90",
    "metadata": {},
    "source": [
     "### Train #2"
@@ -368,7 +368,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "1551a9df",
+   "id": "18f4e96b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,7 +378,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "91b02333",
+   "id": "6b4af766",
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +399,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "d43df81e",
+   "id": "98129dd8",
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dacf5f7b",
+   "id": "26aaef1f",
    "metadata": {},
    "source": [
     "### Train #3"
@@ -427,7 +427,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "4df62870",
+   "id": "bab44081",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -437,7 +437,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "2b33f7f9",
+   "id": "1b3b03ca",
    "metadata": {},
    "outputs": [
     {
@@ -458,7 +458,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "a69596d5",
+   "id": "7f4a1361",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -470,7 +470,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "326deba1",
+   "id": "bd86e445",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -480,7 +480,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "99d041f9",
+   "id": "83cdc9c2",
    "metadata": {},
    "outputs": [
     {
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a1dbbdb",
+   "id": "fed2c40e",
    "metadata": {},
    "source": [
     "### Train #4"
@@ -506,7 +506,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "c8671d52",
+   "id": "6188c76e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -516,7 +516,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "30c7506e",
+   "id": "d2e31e5a",
    "metadata": {},
    "outputs": [
     {
@@ -537,7 +537,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15acd8a2",
+   "id": "63703123",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -548,7 +548,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "d50c4711",
+   "id": "a26af0a6",
    "metadata": {},
    "outputs": [
     {
@@ -571,7 +571,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c3008d9d",
+   "id": "57d78ed5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -582,7 +582,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "4aa1d377",
+   "id": "cc4b4464",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -592,8 +592,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "573a3f5a",
+   "execution_count": 45,
+   "id": "182c07d4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -602,13 +602,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0e08e720",
+   "execution_count": 46,
+   "id": "8e6022be",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy =  0.7833567868660217\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Accuracy = \", metrics.accuracy_score(y_test, prediction_test))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "60e38744",
+   "metadata": {},
+   "source": [
+    "### Train #5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "f33ba337",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = RandomForestClassifier(n_estimators=90, max_depth=20, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "36610b56",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 53min 50s\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "RandomForestClassifier(max_depth=20, n_estimators=90, random_state=42)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "model.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "bdb71ba6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['sandstone_model_ne90_md20.joblib']"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import joblib\n",
+    "filename_joblib = 'sandstone_model_ne90_md20.joblib'\n",
+    "joblib.dump(model, filename_joblib)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "ded63799",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy =  0.7904983875696276\n",
+      "Wall time: 5min 3s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "from sklearn import metrics\n",
+    "prediction_test = model.predict(X_test)\n",
+    "print(\"Accuracy = \", metrics.accuracy_score(y_test, prediction_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c2ca041b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
