--- a/traditional-segmentation/rf_multi_conv.ipynb
+++ b/traditional-segmentation/rf_multi_conv.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 2,
    "id": "2369743f",
    "metadata": {},
    "outputs": [],
@@ -37,30 +37,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "779be15e",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'2.5.0'"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import tensorflow as tf\n",
-    "tf.__version__"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
-   "id": "9bec998b",
+   "id": "779be15e",
    "metadata": {},
    "outputs": [
     {
@@ -75,13 +53,35 @@
     }
    ],
    "source": [
+    "import tensorflow as tf\n",
+    "tf.__version__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "9bec998b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2.5.0'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "import keras\n",
     "keras.__version__"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "faac72b1",
    "metadata": {},
    "outputs": [],
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "434b287a",
    "metadata": {},
    "outputs": [],
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "9b123282",
    "metadata": {},
    "outputs": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "3f0dc2ab",
    "metadata": {},
    "outputs": [],
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "beb5c73e",
    "metadata": {},
    "outputs": [],
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 10,
    "id": "5657c01b",
    "metadata": {},
    "outputs": [],
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 11,
    "id": "66382e84",
    "metadata": {},
    "outputs": [
@@ -177,7 +177,7 @@
        "array([  0, 128, 255], dtype=uint8)"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 12,
    "id": "45d657ca",
    "metadata": {},
    "outputs": [
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 13,
    "id": "fe234105",
    "metadata": {},
    "outputs": [],
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 14,
    "id": "d9da407f",
    "metadata": {},
    "outputs": [
@@ -232,7 +232,7 @@
        "array([0, 1, 2], dtype=int64)"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 15,
    "id": "cc34db6d",
    "metadata": {},
    "outputs": [
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 16,
    "id": "a113a85d",
    "metadata": {},
    "outputs": [],
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 17,
    "id": "1a3dbb6b",
    "metadata": {},
    "outputs": [
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "id": "42329634",
    "metadata": {},
    "outputs": [],
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 19,
    "id": "a7c711a6",
    "metadata": {},
    "outputs": [],
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 20,
    "id": "45c9a9cc",
    "metadata": {},
    "outputs": [],
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 21,
    "id": "8839b599",
    "metadata": {},
    "outputs": [],
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 22,
    "id": "2a3fb7d7",
    "metadata": {},
    "outputs": [
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 23,
    "id": "b8a490b8",
    "metadata": {},
    "outputs": [
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 24,
    "id": "29598f31",
    "metadata": {},
    "outputs": [
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 40,
    "id": "9cf1b27d",
    "metadata": {},
    "outputs": [],
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 38,
    "id": "8e99cdb8",
    "metadata": {},
    "outputs": [],
@@ -914,9 +914,273 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cabd3c9c",
+   "metadata": {},
+   "source": [
+    "### Class Balancing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "d7d38a08",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([0, 1, 2], dtype=int64),\n",
+       " array([4146224,   18058,   30022], dtype=int64))"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.unique(y_train, return_counts=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "eba3c46f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "classes = train_masks.reshape(-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "a90493d3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 1, 2], dtype=int64)"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.unique(classes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "1df52eb1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Class weights are:  [ 0.3371987  77.42282276 46.56922701]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\alif-\\AppData\\Roaming\\Python\\Python39\\site-packages\\sklearn\\utils\\validation.py:70: FutureWarning: Pass classes=[0 1 2], y=[0 0 0 ... 0 0 0] as keyword args. From version 1.0 (renaming of 0.25) passing these as positional arguments will result in an error\n",
+      "  warnings.warn(f\"Pass {args_msg} as keyword args. From version \"\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.utils import class_weight\n",
+    "class_weights = class_weight.compute_class_weight('balanced',\n",
+    "                                                 np.unique(y_train),\n",
+    "                                                 classes)\n",
+    "print(\"Class weights are: \", class_weights)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "fe962b00",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_weights = {0:0.3, 1:70, 2:40}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "9ac782bb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "RF_balanced = RandomForestClassifier(n_estimators=50,\n",
+    "                                    class_weight=my_weights,\n",
+    "                                    #class_weight=balanced,\n",
+    "                                    random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "a37fface",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 10min 16s\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "RandomForestClassifier(class_weight={0: 0.3, 1: 70, 2: 40}, n_estimators=50,\n",
+       "                       random_state=42)"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "RF_balanced.fit(X_for_RF, Y_for_RF)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "c5e59d64",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filename = 'rf_conv_50est_16img_balanced.sav'\n",
+    "pickle.dump(RF_balanced, open(filename, 'wb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "d2d1d5f1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\alif-\\AppData\\Roaming\\Python\\Python39\\site-packages\\sklearn\\utils\\validation.py:63: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+      "  return f(*args, **kwargs)\n"
+     ]
+    }
+   ],
+   "source": [
+    "loaded_model = pickle.load(open(filename, 'rb'))\n",
+    "\n",
+    "test_fname = 'P054'\n",
+    "test_format = '.png'\n",
+    "\n",
+    "test_img_path = DIR + 'test_images/' + test_fname + test_format\n",
+    "test_img = cv2.imread(test_img_path, cv2.IMREAD_COLOR)\n",
+    "test_img = cv2.resize(test_img, (SIZE, SIZE))\n",
+    "test_img = cv2.cvtColor(test_img, cv2.COLOR_RGB2BGR)\n",
+    "test_img = np.expand_dims(test_img, axis=0)\n",
+    "\n",
+    "X_test_features = feature_extractor.predict(test_img)\n",
+    "X_test_features = X_test_features.reshape(-1, X_test_features.shape[3])\n",
+    "\n",
+    "prediction = loaded_model.predict(X_test_features)\n",
+    "\n",
+    "# Reshape and save prediction\n",
+    "prediction_image = prediction.reshape(mask.shape)\n",
+    "plt.imsave(\"rf_multi_conv/predicted/\" + test_fname + test_format, prediction_image, cmap=\"binary\")\n",
+    "\n",
+    "true_mask_path = DIR + 'test_labels/' + test_fname + test_format\n",
+    "true_mask = cv2.imread(mask_path, 0)\n",
+    "true_mask = cv2.resize(mask, (SIZE, SIZE), interpolation = cv2.INTER_NEAREST)\n",
+    "\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "labelencoder = LabelEncoder()\n",
+    "h, w = true_mask.shape\n",
+    "true_mask_reshaped = true_mask.reshape(-1, 1)\n",
+    "true_mask_reshaped_encoded = labelencoder.fit_transform(true_mask_reshaped)\n",
+    "true_mask_encoded_original_shape = true_mask_reshaped_encoded.reshape(h, w)\n",
+    "\n",
+    "true_mask = true_mask_reshaped_encoded\n",
+    "true_mask = true_mask.reshape(-1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "2995f31e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy:  0.9822463989257812\n",
+      "Jaccard score:  0.32741546630859375\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Accuracy: \", metrics.accuracy_score(true_mask, prediction))\n",
+    "\n",
+    "jaccard_score = metrics.jaccard_score(true_mask, prediction, average='macro')\n",
+    "print(\"Jaccard score: \", jaccard_score)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "f641105e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.32741547\n",
+      "IoU for class 1 is:  0.9822464\n",
+      "IoU for class 2 is:  0.0\n",
+      "IoU for class 3 is:  0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# from keras.metrics import MeanIOU\n",
+    "num_classes = 3\n",
+    "IOU_RF = tf.keras.metrics.MeanIoU(num_classes=num_classes)\n",
+    "IOU_RF.update_state(true_mask, prediction)\n",
+    "print(IOU_RF.result().numpy())\n",
+    "\n",
+    "values = np.array(IOU_RF.get_weights()).reshape(num_classes, num_classes)\n",
+    "# print(values)\n",
+    "\n",
+    "class1_IoU = values[0,0]/(values[0,0] + values[0,1] + values[0,2]  + values[1,0]+ values[2,0])\n",
+    "class2_IoU = values[1,1]/(values[1,1] + values[1,0] + values[1,2]  + values[0,1]+ values[2,1])\n",
+    "class3_IoU = values[2,2]/(values[2,2] + values[2,0] + values[2,1] + values[0,2]+ values[1,2])\n",
+    "\n",
+    "print(\"IoU for class 1 is: \", class1_IoU)\n",
+    "print(\"IoU for class 2 is: \", class2_IoU)\n",
+    "print(\"IoU for class 3 is: \", class3_IoU)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0e78a3e",
+   "id": "17c1d019",
    "metadata": {},
    "outputs": [],
    "source": []
