Learning about word embeddings

--- a/pytorch/pytorch_deeplearning.ipynb
+++ b/pytorch/pytorch_deeplearning.ipynb
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "463ca8da",
+   "id": "549d8dbf",
    "metadata": {},
    "source": [
     "Tensors know how to compute gradients with respect to the elements used to compute it using the computational graph. Since loss is a tensor, we can compute gradients with respect to the parameters used to compute it. We can then perform gradient updates."
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5d4221f",
+   "id": "3c27f0d5",
    "metadata": {},
    "source": [
     "We can build a network in PyTorch using only affine maps and non-linearities. In the following example, we will also compute a loss function and update parameters through backpropagation. <br><br>\n",
@@ -317,7 +317,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "f20790d1",
+   "id": "5bc64f09",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +328,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "5cd259a6",
+   "id": "563918d6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,7 +342,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "5a6299b6",
+   "id": "79dea964",
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +360,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "5f7062c4",
+   "id": "4b3b2162",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +377,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "a4af32d0",
+   "id": "86ca38ca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "6aa13388",
+   "id": "287d64fd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +402,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "9891af3a",
+   "id": "2d615393",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,7 +414,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "9a355489",
+   "id": "33ebfbc1",
    "metadata": {},
    "outputs": [
     {
@@ -445,7 +445,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "4ec3ac52",
+   "id": "30038110",
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +467,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "e4aa80ee",
+   "id": "d1a1dfaf",
    "metadata": {},
    "outputs": [
     {
@@ -485,7 +485,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "ab49cf4d",
+   "id": "4c33064f",
    "metadata": {},
    "outputs": [
     {
@@ -517,16 +517,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "id": "c7e0e168",
+   "execution_count": 56,
+   "id": "4d00d54a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(['Yo', 'creo', 'que', 'si'], 'SPANISH'),\n",
+       " (['it', 'is', 'lost', 'on', 'me'], 'ENGLISH')]"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "e41c986f",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[-0.1632, -1.8935]])\n",
-      "tensor([[-2.6800, -0.0710]])\n"
+      "SPANISH\n",
+      "ENGLISH\n"
      ]
     }
    ],
@@ -535,47 +557,15 @@
     "    for instance, label in test_data:\n",
     "        bow_vec = bow_vectorizer(instance, word_indices)\n",
     "        log_probs = model(bow_vec)\n",
-    "        print(log_probs)"
+    "        \n",
+    "        x_t = F.softmax(log_probs,dim=-1)\n",
+    "        y = torch.argmax(x_t, dim=1)\n",
+    "        \n",
+    "        if y == 0:\n",
+    "            print(\"SPANISH\")\n",
+    "        else:\n",
+    "            print(\"ENGLISH\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "id": "a88dfd61",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x_t = F.softmax(log_probs,dim=-1)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "id": "759558a4",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[0.0686, 0.9314]])"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "x_t"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "331e268e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
